client/src/components/Slider/Slider.css
.banner {
  position: relative;
}

.sliderH2 {
  position: absolute;
  bottom: 55px;
  left: 50px;
  font-size: 50px;
  background: rgba(245, 245, 245, 0.9);
  padding: 10px;
  border-radius: 15px;
}

.sliderP {
  position: absolute;
  bottom: 35px;
  left: 50px;
  font-size: 15px;
  color: black;
  background: rgba(245, 245, 245, 0.9);
  padding: 10px;
  border-radius: 15px;
}

.imgContainer {
  width: 100vw;
  height: 410px;
  overflow: hidden;
}

.sliderImg {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
}

.sliderButton {
  width: 100%;
}

@media screen and (max-width: 768px) {
  .sliderH2 {
    bottom: 55px;
    left: 30px;
    font-size: 20px;
  }

  .sliderP {
    bottom: 35px;
    left: 30px;
    font-size: 7px;
  }
  .imgContainer {
    height: 210px;
  }
}

@media screen and (min-width: 2000px) {
  .imgContainer {
    height: 500px;
  }
}

